# snake-game

./: CMakeLists.txt  Constants.h  Fruit.cpp  Fruit.h  Map.cpp  Map.h  PartOfSnake.cpp  PartOfSnake.h  Snake.cpp  Snake.h  fruit.cpp  fruit.h  main.cpp  map.cpp  map.h  partOfSnake.cpp  partOfSnake.h  snake.cpp  snake.h  snakeHead.cpp  snakeHead.h
brain/: brain.cpp  brain.h  fakeTables.txt  tables.txt
snakeFiles/: PartOfSnake.cpp  PartOfSnake.h  Snake.cpp  Snake.h
